# smol-untitled-pong-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
.github/workflows/: format-check.yml
docs/: STYLEGUIDE.md
src/: Ball.cpp  Ball.h  Entity.cpp  Entity.h  Manager.cpp  Manager.h  Player.cpp  Player.h  helpers.cpp  helpers.h  main.cpp
tools/: clang_format.py
